Initial tests with layer framework